added home page layout

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/08886d62ae.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="./bloom-3 (2).png" type="image/png"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
